GNOME Bugzilla – Bug 791507
kmssink: some resize will fail when driver can not scale
Last modified: 2018-08-27 22:57:33 UTC
kmssink: some resize will fail when driver can not scale. When can_scale is FALSE, kmssink will push even upsteam to videoconvert for resize, videoconvert will get buffer from kmssink the buffer size need at least align to 4
This is not clear. Can you explain the problem ? How do you reproduce this ?
Closing this bug report as no further information has been provided. Please feel free to reopen this bug report if you can provide the information that was asked for in a previous comment. Thanks!