[MMFMWK-7830] kmssink: align width and heigth to 4

When can_scale is FALSE, kmssink will push even upsteam to
videoconvert for resize, videoconvert will get buffer from kmssink
the buffer size need at least align to 4

upstream status: Pending
https://bugzilla.gnome.org/show_bug.cgi?id=791507